# polgraw-allsky

./: .gitignore  CMakeLists.txt
gridgen/: CMakeLists.txt
gridgen/lib/: CMakeLists.txt
gridgen/lib/inc/: DensityS1.h  DensityS2.h  FisherRM.h  GridS1.h  GridS2.h  Node.h  OptionValue.h  ReadEphemeris.h  num.h  stringmanip.h
gridgen/lib/src/: DataS2.cpp  DensityS1.cpp  DensityS2.cpp  FisherRM.cpp  GridS1.cpp  GridS2.cpp  Node.cpp  ReadConfig.cpp  ReadEphemeris.cpp  main.cpp  num.cpp
gridgen/util/: CMakeLists.txt
gridgen/util/src/: main.cpp
search/: CMakeLists.txt
search/network/: CMakeLists.txt
search/network/posix/: CMakeLists.txt
search/network/src-cpu/: CMakeLists.txt  auxi.c  auxi.h  floats.c  floats.h  gauss-xdat.c  gridopt.c  init.c  init.h  jobcore.c  jobcore.h  main.c  settings.c  settings.h  sigen.c  struct.h  timer.c  timer.h
search/network/src-opencl/: CMakeLists.txt
search/network/src-opencl/doc/: CMakeLists.txt
search/network/src-opencl/doc/script/: freq_vs_SNR.plt
search/network/src-opencl/inc/: auxi.h  blas_dot.h  calc_mxx.h  complex_op.h  fft_interpolate.h  find_peaks.h  floats.h  fstat.h  init.h  jobcore.h  locations.in.h  log.h  modvir.h  phase_mod.h  precision.h  settings.h  signal_params.h  sky_positions.h  spline_interpolate.h  spline_z.h  struct.h  time_to_frequency.h  tshift_pmod.h
search/network/src-opencl/inc/CL/: util.h
search/network/src-opencl/krn/: complex_op.cl  complex_op.h.cl  fft_interpolate.cl  fft_interpolate.h.cl  floats.h.cl  fstat.cl  fstat.h.cl  kernels.cl  kernels.h.cl  modvir.cl  modvir.h.cl  phase_mod.cl  phase_mod.h.cl  tshift_pmod.cl  tshift_pmod.h.cl
search/network/src-opencl/src/: auxi.c  blas_dot.c  calc_mxx.c  comparison.cpp  comparison2.cpp  complex_op.c  fft_interpolate.c  find_peaks.c  fstat.c  init.c  jobcore.c  log.c  log_dp.c  log_sp.c  main.c  modvir.c  phase_mod.c  settings.c  sky_positions.c  spline_interpolate.c  spline_interpolate_spline.c  spline_z.c  time_to_frequency.c  tshift_pmod.c  validation.cpp
search/network/src-opencl/src/CL/: util.c
search/network/src-sycl/: CMakeLists.txt
search/network/src-sycl/inc/: AmplitudeModulation.hpp  AmplitudeModulationCoeff.hpp  AstronomicalConstants.hpp  MathConstants.hpp  Options.hpp  Sky.hpp  SolarSystem.hpp
search/network/src-sycl/src/: Main.cpp  Options.cpp
